--- a/Uppgift14-Garage30/Views/Members/Index.cshtml
+++ b/Uppgift14-Garage30/Views/Members/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.PersonalId)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
             <th>
@@ -25,11 +28,14 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
+                @Html.DisplayFor(modelItem => item.PersonalId)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.LastName)
+                    @Html.DisplayFor(modelItem => item.FirstName)
             </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.PersonalId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.PersonalId">Details</a> |
