--- a/Uppgift14-Garage30/Views/_ViewImports.cshtml
+++ b/Uppgift14-Garage30/Views/_ViewImports.cshtml
@@ -1,3 +1,8 @@
 ﻿@using Uppgift14_Garage30
 @using Uppgift14_Garage30.Models
+@using Uppgift14_Garage30.Controllers
+@using Uppgift14_Garage30.Validations
+@using Uppgift14_Garage30.Filters
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
