--- a/Uppgift14-Garage30/Views/Vehicles/Create.cshtml
+++ b/Uppgift14-Garage30/Views/Vehicles/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Uppgift14_Garage30.Models.Vehicle
+﻿@model Uppgift14_Garage30.Models.ViewModels.VehicleCreateViewModel
+@inject IVehicleTypeService vtService
 
 @{
     ViewData["Title"] = "Create";
@@ -34,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="VehicleTypeId" class="control-label"></label>
-                <select asp-for="VehicleTypeId" class ="form-control" asp-items="ViewBag.VehicleTypeId"></select>
+                <select asp-for="VehicleTypeId" class="form-control" asp-items="ViewBag.VehicleTypeId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="MemberPersonalId" class="control-label"></label>
