Viewmodel for parked vehicle

--- a/Uppgift14-Garage30/Views/Members/Index.cshtml
+++ b/Uppgift14-Garage30/Views/Members/Index.cshtml
@@ -40,6 +40,8 @@
                 <a asp-action="Edit" asp-route-id="@item.PersonalId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.PersonalId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.PersonalId">Delete</a>
+                    <a asp-action="ParkedVehiclesOverview" asp-controller="Vehicles" class="btn btn-info">View Parked Vehicles</a>
+
             </td>
         </tr>
 }
