--- a/Uppgift14-Garage30/Views/Vehicles/ParkedVehiclesOverview.cshtml
+++ b/Uppgift14-Garage30/Views/Vehicles/ParkedVehiclesOverview.cshtml
@@ -29,7 +29,10 @@
                 <td>@vehicle.NumberOfVehicles</td>
                 <td>@vehicle.VehicleType</td>
                 <td>@vehicle.RegistrationNumber</td>
-                <td>@vehicle.ParkingTime</td>
+                <td>@string.Format("{0} days, {1} hours, {2} minutes", vehicle.ParkingTime.Days, vehicle.ParkingTime.Hours, vehicle.ParkingTime.Minutes)</td>
+
+
+                
             </tr>
         }
     </tbody>
