--- a/Uppgift14-Garage30/Views/Members/Create.cshtml
+++ b/Uppgift14-Garage30/Views/Members/Create.cshtml
@@ -4,8 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create Member</h1>
+<h1>Create</h1>
 
+<h4>Member</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -13,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="PersonalId" class="control-label"></label>
-                <input asp-for="PersonalId" class="form-control" placeholder="YYMMDDXXXX" />
+                <input asp-for="PersonalId" class="form-control" />
                 <span asp-validation-for="PersonalId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -27,15 +28,14 @@
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-<div class="row">
-    <div class="mt-4">
-        <a asp-action="Index" class="btn btn-primary">Back to Home Page</a>
-    </div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
