--- a/Uppgift14-Garage30/Views/Vehicles/ParkedVehiclesOverview.cshtml
+++ b/Uppgift14-Garage30/Views/Vehicles/ParkedVehiclesOverview.cshtml
@@ -9,14 +9,16 @@
 
 
 
+
+
 <table>
     <thead>
         <tr>
-            <th>Owner Full Name</th>
+            <th>Full Name</th>
             <th>Personal ID</th>
-            <th>Number of Vehicles</th>
+            <th>Num of Vehicles</th>
             <th>Vehicle Type</th>
-            <th>Registration Number</th>
+            <th>Reg Number</th>
             <th>Parking Time</th>
         </tr>
     </thead>
@@ -30,9 +32,6 @@
                 <td>@vehicle.VehicleType</td>
                 <td>@vehicle.RegistrationNumber</td>
                 <td>@string.Format("{0} days, {1} hours, {2} minutes", vehicle.ParkingTime.Days, vehicle.ParkingTime.Hours, vehicle.ParkingTime.Minutes)</td>
-
-
-                
             </tr>
         }
     </tbody>
