--- a/Uppgift14-Garage30/Views/Home/Index.cshtml
+++ b/Uppgift14-Garage30/Views/Home/Index.cshtml
@@ -4,5 +4,29 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>
+        <h3>Temporary links during development</h3>
+        <ul class="list-group">
+            <li class="list-group-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Login">Log in member</a>
+            </li>
+            <li class="list-group-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Index">View all members</a>
+            </li>
+            <li class="list-group-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Create">Register member</a>
+            </li>
+
+            <li class="list-group-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="Index">View all Vehicles</a>
+            </li>
+            <li class="list-group-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="Create">Register vehicles</a>
+            </li>
+
+            <li class="list-group-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="ParkedVehiclesOverview">Admin</a>
+            </li>
+        </ul>
+    </p>
 </div>
