--- a/Uppgift14-Garage30/Views/Vehicles/Edit.cshtml
+++ b/Uppgift14-Garage30/Views/Vehicles/Edit.cshtml
@@ -1,7 +1,7 @@
-﻿@model Uppgift14_Garage30.Models.Vehicle
+﻿@model Uppgift14_Garage30.Models.ViewModels.VehicleEditViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Vehicle";
 }
 
 <h1>Edit</h1>
@@ -12,7 +12,19 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="RegistrationNumber" />
+            <div class="form-group">
+                <label asp-for="RegistrationNumber" class="control-label"></label>
+                <input readonly asp-for="RegistrationNumber" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="MemberPersonalId" class="control-label"></label>
+                <input readonly asp-for="MemberPersonalId" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="VehicleTypeId" class="control-label"></label>
+                <select asp-for="VehicleTypeId" class="form-control" asp-items="ViewBag.VehicleTypeId"></select>
+                <span asp-validation-for="VehicleTypeId" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Make" class="control-label"></label>
                 <input asp-for="Make" class="form-control" />
@@ -27,16 +39,6 @@
                 <label asp-for="Color" class="control-label"></label>
                 <input asp-for="Color" class="form-control" />
                 <span asp-validation-for="Color" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="VehicleTypeId" class="control-label"></label>
-                <select asp-for="VehicleTypeId" class="form-control" asp-items="ViewBag.VehicleTypeId"></select>
-                <span asp-validation-for="VehicleTypeId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MemberPersonalId" class="control-label"></label>
-                <select asp-for="MemberPersonalId" class="form-control" asp-items="ViewBag.MemberPersonalId"></select>
-                <span asp-validation-for="MemberPersonalId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
