Move file in the correct folder

--- a/Uppgift14-Garage30/Views/Members/Create.cshtml
+++ b/Uppgift14-Garage30/Views/Members/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MemberCreateViewModel
+﻿@model Uppgift14_Garage30.Models.ViewModels.MemberCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
