--- a/Uppgift14-Garage30/Views/Members/Create.cshtml
+++ b/Uppgift14-Garage30/Views/Members/Create.cshtml
@@ -13,7 +13,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="PersonalId" class="control-label"></label>
-                <input asp-for="PersonalId" class="form-control" placeholder="YYMMDDXXXX" />
+                <input asp-for="PersonalId" class="form-control" placeholder="YYYYMMDDXXXX" />
                 <span asp-validation-for="PersonalId" class="text-danger"></span>
             </div>
             <div class="form-group">
