--- a/Uppgift14-Garage30/Views/Vehicles/Details.cshtml
+++ b/Uppgift14-Garage30/Views/Vehicles/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Uppgift14_Garage30.Models.Vehicle
+﻿@model Uppgift14_Garage30.Models.ViewModels.VehicleEditViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -17,16 +17,16 @@
             @Html.DisplayFor(model => model.RegistrationNumber)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Member)
+            @Html.DisplayNameFor(model => model.MemberPersonalId)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Member.PersonalId)
+            @Html.DisplayFor(model => model.MemberPersonalId)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.VehicleType)
+            @Html.DisplayNameFor(model => model.VehicleTypeName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.VehicleType.Name)
+            @Html.DisplayFor(model => model.VehicleTypeName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Make)
