--- a/Uppgift14-Garage30/Views/Vehicles/Index.cshtml
+++ b/Uppgift14-Garage30/Views/Vehicles/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Uppgift14_Garage30.Models.Vehicle>
+﻿@model IEnumerable<Uppgift14_Garage30.Models.ViewModels.VehicleEditViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Vehicle</a>
 </p>
 <table class="table">
     <thead>
@@ -16,10 +16,10 @@
                 @Html.DisplayNameFor(model => model.RegistrationNumber)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Member)
+                @Html.DisplayNameFor(model => model.MemberPersonalId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.VehicleType)
+                @Html.DisplayNameFor(model => model.VehicleTypeName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Make)
@@ -40,10 +40,10 @@
                 @Html.DisplayFor(modelItem => item.RegistrationNumber)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Member.PersonalId)
+                @Html.DisplayFor(modelItem => item.MemberPersonalId)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.VehicleType.Id)
+                @Html.DisplayFor(modelItem => item.VehicleTypeName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Make)
