--- a/Uppgift14-Garage30/Views/Members/Details.cshtml
+++ b/Uppgift14-Garage30/Views/Members/Details.cshtml
@@ -22,6 +22,20 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LastName)
         </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Vehicles)
+        </dt>
+        <dd class="col-sm-10">
+
+            @foreach (var vehicle in Model.Vehicles)
+            {
+                @*@vehicle.Title*@
+                <a asp-controller="Vehicles" asp-action="Details" asp-route-id="@vehicle.RegistrationNumber">@vehicle.RegistrationNumber @vehicle.Make @vehicle.Model</a>
+                <br />
+            }
+        </dd>
+
     </dl>
 </div>
 <div>
