--- a/Uppgift14-Garage30/Views/Members/Edit.cshtml
+++ b/Uppgift14-Garage30/Views/Members/Edit.cshtml
@@ -4,15 +4,18 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit Member</h1>
 
-<h4>Member</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="PersonalId" />
+            <div class="form-group">
+                <label asp-for="PersonalId" class="control-label"></label>
+                <input readonly asp-for="PersonalId" class="form-control" />
+            </div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
