--- a/Uppgift14-Garage30/Views/Members/Create.cshtml
+++ b/Uppgift14-Garage30/Views/Members/Create.cshtml
@@ -34,7 +34,7 @@
 </div>
 <div class="row">
     <div class="mt-4">
-        <a asp-action="Index" class="btn btn-primary">Back to Home Page</a>
+        <a asp-action="Index" class="btn btn-primary">Back to List</a>
     </div>
 </div>
 
