--- a/Uppgift14-Garage30/Views/Members/Edit.cshtml
+++ b/Uppgift14-Garage30/Views/Members/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Uppgift14_Garage30.Models.Member
+﻿@model Uppgift14_Garage30.Models.ViewModels.MemberEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -33,8 +33,10 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div class="row">
+    <div class="mt-4">
+        <a asp-action="Index" class="btn btn-primary">Back to List</a>
+    </div>
 </div>
 
 @section Scripts {
