--- a/Uppgift14-Garage30/Views/Members/Login.cshtml
+++ b/Uppgift14-Garage30/Views/Members/Login.cshtml
@@ -14,9 +14,9 @@
         <form asp-action="Login">
             <div class="form-group">
                 <select asp-for="PersonalId" asp-items="ViewBag.Members">
-                    <option value=""></option>
+                    <option disabled selected value="">-- Choose user</option>
                 </select>
-                <span @* asp-validation-for="PersolalId" *@ class="text-danger"></span>
+                <span asp-validation-for="PersonalId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
