--- a/Uppgift14-Garage30/Views/Vehicles/Edit.cshtml
+++ b/Uppgift14-Garage30/Views/Vehicles/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Uppgift14_Garage30.Models.ViewModels.VehicleEditViewModel
 
 @{
-    ViewData["Title"] = "Edit Vehicle";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit Vehicle</h1>
 
-<h4>Vehicle</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -47,10 +46,11 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div class="row">
+    <div class="mt-4">
+        <a asp-action="Index" class="btn btn-primary">Back to List</a>
+    </div>
 </div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
