--- a/Uppgift14-Garage30/Views/Vehicles/Delete.cshtml
+++ b/Uppgift14-Garage30/Views/Vehicles/Delete.cshtml
@@ -47,5 +47,15 @@
         <input type="hidden" asp-for="RegistrationNumber" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
+
+        @if (Model.CurrentParking != null)
+        {
+            <a asp-action="CheckOutVehicle" asp-route-registrationNumber="@Model.RegistrationNumber" class="btn btn-primary">View Receipt</a>
+        }
+       
     </form>
+
+ 
+
+
 </div>
