--- a/Uppgift14-Garage30/Views/Vehicles/Index.cshtml
+++ b/Uppgift14-Garage30/Views/Vehicles/Index.cshtml
@@ -9,9 +9,13 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+
+
 <table class="table">
     <thead>
         <tr>
+
             <th>
                 @Html.DisplayNameFor(model => model.Make)
             </th>
@@ -31,30 +35,25 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Make)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Model)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Color)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.VehicleType.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Member.PersonalId)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.RegistrationNumber">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.RegistrationNumber">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.RegistrationNumber">Delete</a>
-
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.Make)</td>
+                <td>@Html.DisplayFor(modelItem => item.Model)</td>
+                <td>@Html.DisplayFor(modelItem => item.Color)</td>
+                <td>@Html.DisplayFor(modelItem => item.VehicleType.Id)</td>
+                <td>@Html.DisplayFor(modelItem => item.Member.PersonalId)</td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.RegistrationNumber">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.RegistrationNumber">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.RegistrationNumber">Delete</a>
+                    
+                    
+                      
+                    
+                </td>
+            </tr>
+        }
     </tbody>
+
 </table>
