--- a/Uppgift14-Garage30/Views/Vehicles/Checkout.cshtml
+++ b/Uppgift14-Garage30/Views/Vehicles/Checkout.cshtml
@@ -1,4 +1,4 @@
-﻿@model Uppgift14_Garage30.Models.ViewModels.VehicleEditViewModel
+﻿@model Uppgift14_Garage30.Models.ViewModels.VehicleCheckoutViewModel
 
 @{
     ViewData["Title"] = "Checkout";
