Minor changes in many files. The changes are: Correcting links Making sure the pages have only one title and one that makes sense (eg. "Register Vehicle" instead of "Create") Turning links into buttons, primary for saving and if there is only one, secondary for going back to list.
There is one thing NOT fixed in this PR:
There are two lists of vehicles, Index and ParkedVehiclesOverview.  This is a bit confusing. We are only linking to ParkedVehiclesOverview (not sure if those are only parked cars or all cars??) but with every action on vehicles (create, edit etc) the return view is Index. There is not enough time to change this, as making changes in controllers requires a lot more testing than just the razor pages. Also, there are some links on the Index page that does not exist on the ParkedVehiclesOverview (and possibly more cars, if there is a filter on parked cars only).

--- a/Uppgift14-Garage30/Views/Home/Index.cshtml
+++ b/Uppgift14-Garage30/Views/Home/Index.cshtml
@@ -3,30 +3,26 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Welcome to Garage 3.0</h1>
     <p>
-        <h3>Temporary links during development</h3>
+        <h3>Where do you want to start?</h3>
         <ul class="list-group">
             <li class="list-group-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Login">Log in member</a>
             </li>
             <li class="list-group-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Create">Register member</a>
+            </li>
+            <li class="list-group-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Index">View all members</a>
             </li>
             <li class="list-group-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Create">Register member</a>
-            </li>
-
-            <li class="list-group-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="Index">View all Vehicles</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="ParkedVehiclesOverview">View all Vehicles</a>
             </li>
             <li class="list-group-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="Create">Register vehicles</a>
             </li>
 
-            <li class="list-group-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="ParkedVehiclesOverview">Admin</a>
-            </li>
         </ul>
     </p>
 </div>
