--- a/Uppgift14-Garage30/Views/Members/Details.cshtml
+++ b/Uppgift14-Garage30/Views/Members/Details.cshtml
@@ -79,6 +79,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.PersonalId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model?.PersonalId">Edit Member</a>
+    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 </div>
