--- a/Uppgift14-Garage30/Views/Members/Index.cshtml
+++ b/Uppgift14-Garage30/Views/Members/Index.cshtml
@@ -1,14 +1,11 @@
 ﻿@model IEnumerable<Uppgift14_Garage30.Models.Member>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "All members";
 }
 
-<h1>Index</h1>
+<h1>All members</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -31,17 +28,14 @@
                 @Html.DisplayFor(modelItem => item.PersonalId)
             </td>
             <td>
-                    @Html.DisplayFor(modelItem => item.FirstName)
+                @Html.DisplayFor(modelItem => item.FirstName)
             </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.PersonalId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.PersonalId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.PersonalId">Delete</a>
-                    <a asp-action="ParkedVehiclesOverview" asp-controller="Vehicles" class="btn btn-info">View Parked Vehicles</a>
-
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.PersonalId">Edit</a>
+                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.PersonalId">Details</a>
             </td>
         </tr>
 }
