--- a/Uppgift14-Garage30/Views/Members/Login.cshtml
+++ b/Uppgift14-Garage30/Views/Members/Login.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Login</h1>
+<h1>Login Member</h1>
 
-<h4>Member</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,15 +17,11 @@
                 </select>
                 <span asp-validation-for="PersonalId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group py-3">
+                <input type="submit" value="Login" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
