--- a/Uppgift14-Garage30/Views/Vehicles/Create.cshtml
+++ b/Uppgift14-Garage30/Views/Vehicles/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Uppgift14_Garage30.Models.ViewModels.VehicleCreateViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Register vehicle";
 }
 
-<h1>Create</h1>
+<h1>Register Vehicle</h1>
 
-<h4>Vehicle</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -41,14 +40,14 @@
                 <span asp-validation-for="Color" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary my-3" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-secondary my-3" asp-action="ParkedVehiclesOverview">Back to List</a>
 </div>
 
 @section Scripts {
