--- a/Uppgift14-Garage30/Views/Vehicles/Edit.cshtml
+++ b/Uppgift14-Garage30/Views/Vehicles/Edit.cshtml
@@ -39,7 +39,7 @@
                 <input asp-for="Color" class="form-control" />
                 <span asp-validation-for="Color" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group py-3">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -48,7 +48,7 @@
 
 <div class="row">
     <div class="mt-4">
-        <a asp-action="Index" class="btn btn-primary">Back to List</a>
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </div>
 </div>
 @section Scripts {
