--- a/Uppgift14-Garage30/Views/Home/Index.cshtml
+++ b/Uppgift14-Garage30/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                 <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Index">View all members</a>
             </li>
             <li class="list-group-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="ParkedVehiclesOverview">View all Vehicles</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="ParkedVehiclesOverview">View Parked Vehicles</a>
             </li>
             <li class="list-group-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="Create">Register vehicles</a>
