--- a/Uppgift14-Garage30/Views/Vehicles/ParkedVehiclesOverview.cshtml
+++ b/Uppgift14-Garage30/Views/Vehicles/ParkedVehiclesOverview.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<Uppgift14_Garage30.Models.ParkedVehicleViewModel>
 
 @{
-    ViewData["Title"] = "All Vehicles";
+    ViewData["Title"] = "All Parked Vehicles";
     
 }
 
