--- a/Uppgift14-Garage30/Views/Shared/_Layout.cshtml
+++ b/Uppgift14-Garage30/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Index">View all members</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="ParkedVehiclesOverview">All vehicles</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="ParkedVehiclesOverview">All Parked Vehicles</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="Create">Register Vehicle</a>
